# afs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  afs.code-workspace  copilot-instructions.md  init_new_repo.ps1  mcp.json  pyproject.toml  pyrightconfig.json  requirements.txt  template.code-workspace
.github/workflows/: ci.yml  cleanup-caches.yml  heavy-tests.yml  policy.yml
Design/: 20251020_next_steps_after_fda_fix.md  fda_hooks.md  file_inventory.json  gap_analysis_1_hygiene.json  gap_analysis_2_core_functionality.json  gap_analysis_3_fda_analysis.json  gap_analysis_4_telemetry_infrastructure.json  gap_analysis_5_extensibility_ux.json  gap_analysis_shim_build.json  jax_dtype_intergration.json  refactor_controller.md  test_inventory.json
Design/afs/: Automatic Flow dynamic Analysis.md  Flow-Based Proof Synthesis_The Architecture for .md  On_Compitable_Flows_v2.1.md  Repeatable Auto Flow Syntheisis.md  The Specificity Problem. Why Knapsack EFs the Wrong Language.md  auto energy functional design.md  the battle ground.md  woah that crazy.md
Design/backlog_flows/: Classical intent vs. emergent intent.md  Deconvolution the Perfect First Story.md  Intent Based Software Design.md  Submodular Context Selection (a.k.a. Query-Aware Diverse Summarization Facility Location.md  cFlow_v01_a conscious-like system.md
Design/shim_build/: 01_shim_overview_architecture.md  02_primitives_operator_api.md  03_energy_spec_compilation.md  03b_energy_spec_hygiene_spec.md  04_multiscale_wavelet_module.md  05_fda_certificates.md  06_gap_dial_auto_tuner.md  07_runtime_engine.md  08_config_serialization.md  09_testing_ci_examples.md  10_extensibility_backends.md  11_naming_and_layout.md  11a_fda_hooks.md  12_pareto_knob_surface.md  13_tensor_logic_frontend.md  14_contributor_guide.md  15_schema.md  16_ci_and_env.md  17_design_pattern.md  18_atoms_library.md  19_atoms_library_review.md  20_cf_low_level_readiness_checklist.md  21_telematry.md  22_ux_design.md  22b_ux_backlog.md  23_logs_&_debugging.md  24_new_component_quick_start.md  25_ruff_lint_scientific.md
background/: Axioms of a Flow Calculus (the “right logic” for flows).md  Computing via Energy Functionals – A Historical and Modern Overview.md  Energy_Functional_Catalogue_Template.csv  Flow-Dynamics Ananalysis (FDA).md  Flow-Native Security (FNS).md  Naming_convetion.md  On_Compitable_Flows_v2.1.md  The boundry of Flow Computing.md  The five primitives.md  Understanding the Atom Library in Your SDK.md  Where GFD Stands in the History of Energy-Based Computation  generality vs on-the-spot specialization.md  that raraefied air.md
background/stability/: Certificates and guard rails.md  Energey Flow Stability Techniques and pitfalls.md  Examples of Tensor Producst in Positive Characteristics.md  Scientific Underpinnings of Flow dynamics anaylsis.md  Stability_Coverage_Table.csv  What the wavelet coefficients actually mean.md  What “Lyapunov smoothing” really is.md  What “no global shared state” really means.md  gfd_hvac_2.0_stability_decupled_flow_execution.md  shim_upgrades.md  stability_coverage_summary.md
docs/: api_reference.md  jax_configuration.md
qa_logs/: 20251020_amber_controller_phase.md  20251020_atoms_library_implementation.md  20251020_checkpointing_integration_completion.md  20251020_checkpointing_system_completion.md  20251020_cli_commands_completion.md  20251020_cli_runner.md  20251020_conservative_primitive.md  20251020_controller_implementation.md  20251020_controller_lyapunov_certificate.md  20251020_controller_spectral_gap_and_eta_fix.md  20251020_controller_telemetry_integration.md  20251020_dashboard_enhancement_session.md  20251020_dissipative_primitive.md  20251020_dissipative_primitive_verification.md  20251020_energy_compiler_implementation.md  20251020_fda_diagonal_dominance_certificate.md  20251020_fda_estimator_negative_eigenvalue.md  20251020_fda_integration.md  20251020_fda_spectral_gap_certificate.md  20251020_flow_selector_implementation.md  20251020_gap_dial_tuner_qa.md  20251020_initial_spec_definition.md  20251020_l1_atom_and_projective_primitive.md  20251020_multiscale_flow.md  20251020_multiscale_primitive.md  20251020_multiscale_primitive_completion.md  20251020_quadratic_atom_compiler.md  20251020_runtime_primitives.md  20251020_runtime_step_function.md  20251020_runtime_telemetry_integration.md  20251020_sparsity_computation.md  20251020_sparsity_visualization_dashboard.md  20251020_telemetry_flight_recorder.md  20251020_telemetry_refactor.md  20251020_telemetry_structure_qa.md  20251020_tikhonov_atom_compiler.md  20251020_transform_op_implementation.md  20251020_tuner_module.md  20251020_w_space_compiler_integration.md  20251021_legacy_api_cleanup_completion.md  (+29 more)
qa_logs/20251020/: 20251020_checkpointing_system_completion.md  20251020_controller_spectral_gap_certificate.md  20251020_multiscale_flow.md  20251020_sparsity_visualization_dashboard.md  20251020_stochastic_primitive.md  20251020_transform_op_implementation.md  20251020_w_space_compiler_integration.md
runs/fda_run_20251025_101345/: manifest.toml
runs/fda_run_20251025_101350/: manifest.toml
runs/fda_run_20251025_101422/: manifest.toml
runs/fda_run_20251025_102036/: manifest.toml
runs/fda_run_20251025_102322/: manifest.toml
scripts/: find_python_envs.ps1  mp_sanity.py  performance_analysis.py
src/: hello.py
tests/: conftest.py  test_atom_api.py  test_atoms.py  test_compile_report.py  test_compiler.py  test_config.py  test_controller.py  test_cross_platform_dtype.py  test_device_precision_cross_cutting.py  test_dtype_pipeline.py  test_duckdb_manager.py  test_energy_compiler.py  test_energy_policies.py  test_fda.py  test_fda_lanczos_mode.py  test_flight_recorder.py  test_hello.py  test_init_template.py  test_lanczos_contract.py  test_lens_probe.py  test_logging.py  test_manifold_adapters.py  test_numerical_stability.py  test_primitives.py  test_runtime.py  test_shim.py  test_spec_validation.py  test_telemetry_schemas.py  test_transform_op_contract.py  test_tuner.py  test_w_space_compiler.py
(+88 files in other folders)
